# bilderna

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml  renovate.json
.github/worflows/: build.yml
.github/workflows/: deploy.yml  rust.yml  test.yml
assets/: config.json
src/: assets.rs  drawer.rs  main.rs  routes.rs
