[package]
name = "bilderna"
version = "0.2.0"
authors = ["AzariasB"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.25.1", default-features = true }
imageproc = "0.24.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
lazy_static = "1.4.0"
actix-web = "4.5.1"
env_logger = "0.11.3"
chrono = "0.4.38"
awc = "3.4.0"
