[package]
name = "bilderna"
version = "0.2.0"
authors = ["AzariasB"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.25.1", default-features = true }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
actix-web = "4.9.0"
env_logger = "0.11.3"
chrono = "0.4.38"
awc = "3.5.1"


[lints.clippy]
pedantic = { level = "deny", priority = -1 }
missing_panics_doc = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
